docs upd
